# eco_fin

./: README.md  copula_modeling.py  data_pipeline.py  dcc_modeling.py  garch_modeling.py  han_reproduction.py  main.py  pyproject.toml  wcvar_optimizer.py
data/: Baoshan Iron & Steel Stock Price History.csv  Beijing Tongrentang Stock Price History.csv  CSI300_subindices.csv  China Shenhua Energy SH Stock Price History.csv  Huaneng Power International Stock Price History.csv  SAIC Motor Corp Stock Price History.csv  log_returns.csv
