[tool.poetry]
name = "eco_fin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.6.1"
ecos = "^2.0.14"
cvxpy = "^1.6.5"
arch = "^7.2.0"
scipy = "^1.15.3"
matplotlib = "^3.10.3"
pandas = "^2.2.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
